src/test/deca/syntax/valid/sansObjet/40_ifElse.deca
/*Description:
   Test du programme sur utilisation de
      if then else

   Historique:
      cree le 13/01/2020
*/

{
      if (x) {} else {}
}
